src/main/java/frontend/Tiny.jj
options  {
  STATIC=false;
}
PARSER_BEGIN(AnalizadorSintacticoTiny)
package frontend;

import program.Program.Prog;
import program.Program.Dec;
import program.Program.Inst;
import program.Program.DeclaredType;
import program.Program.FParam;
import program.Program.Exp;


import frontend.ASTOps.Lista;

class CabezaProcAs {
   public String proc;
   public Lista<FParam> fparams;
   public CabezaProcAs(String proc, Lista<FParam> fparams) {
	  this.proc = proc;
	  this.fparams = fparams;
   }
}

public class AnalizadorSintacticoTiny {
   private ASTOps ops;
   public void setOps(ASTOps ops) {
	 this.ops = ops;
   }
   String enlaceFuente(Token token) {
	return "fila "+token.beginLine+" columna "+token.beginColumn;
   }
}
PARSER_END(AnalizadorSintacticoTiny)
  TOKEN:{<#letra:["a"-"z","A"-"Z"]>}
  TOKEN:{<#digitoPositivo:["1"-"9"]>}
  TOKEN:{<#digito:<digitoPositivo>|"0">}

  TOKEN:{<#validCharNoEscape: <letra> | " ">}
  TOKEN:{<#validChar: <validCharNoEscape> | "\\" <escapeBody>>}
  TOKEN:{<#escapeBody: "\"" | "n" | "'" | "\\" | "u" <hexChar> <hexChar> <hexChar> <hexChar>>}
  TOKEN:{<#hexChar: <digito> | ["A"-"F"] >}

  SKIP:{<["\t"," ","\r","\b","\n"]>}
  SKIP:{<"//"(~["\n"])*>}

  TOKEN:{<TRUE:("t"|"T")("r"|"R")("u"|"U")("e"|"E")>}
  TOKEN:{<FALSE:("f"|"F")("a"|"A")("l"|"L")("s"|"S")("e"|"E")>}
  TOKEN:{<INT:("i"|"I")("n"|"N")("t"|"T")>}
  TOKEN:{<BOOL:("b"|"B")("o"|"O")("o"|"O")("l"|"L")>}
  TOKEN:{<CHAR:("c"|"C")("h"|"H")("a"|"A")("r"|"R")>}
  TOKEN:{<STRING:("s"|"S")("t"|"T")("r"|"R")("i"|"I")("n"|"N")("g"|"G")>}
  TOKEN:{<DOUBLE:("f"|"F")("l"|"L")("o"|"O")("a"|"A")("t"|"T")>}
  TOKEN:{<TYPE:("t"|"T")("y"|"Y")("p"|"P")("e"|"E")>}
  TOKEN:{<VAR:("v"|"V")("a"|"A")("r"|"R")>}
  TOKEN:{<WHILE:("w"|"W")("h"|"H")("i"|"I")("l"|"L")("e"|"E")>}
  TOKEN:{<PROC:("p"|"P")("r"|"R")("o"|"O")("c"|"C")>}
  TOKEN:{<CALL:("c"|"C")("a"|"A")("l"|"L")("l"|"L")>}
  TOKEN:{<WITH:("w"|"W")("i"|"I")("t"|"T")("h"|"H")>}
  TOKEN:{<NEW:("n"|"N")("e"|"E")("w"|"W")>}
  TOKEN:{<DELETE:("d"|"D")("e"|"E")("l"|"L")("e"|"E")("t"|"T")("e"|"E")>}
  TOKEN:{<STRUCT:("s"|"S")("t"|"T")("r"|"R")("u"|"U")("c"|"C")("t"|"T")>}
  TOKEN:{<DO:("d"|"D")("o"|"O")>}
  TOKEN:{<IF:("i"|"I")("f"|"F")>}
  TOKEN:{<THEN:("t"|"T")("h"|"H")("e"|"E")("n"|"N")>}
  TOKEN:{<ELSE:("e"|"E")("l"|"L")("s"|"S")("e"|"E")>}
  TOKEN:{<SWITCH:("s"|"S")("w"|"W")("i"|"I")("t"|"T")("c"|"C")("h"|"H")>}
  TOKEN:{<CASE:("c"|"C")("a"|"A")("s"|"S")("e"|"E")>}
  TOKEN:{<DEFAULTT:("d"|"D")("e"|"E")("f"|"F")("a"|"A")("u"|"U")("l"|"L")("t"|"T")>}
  TOKEN:{<NULL:("n"|"N")("u"|"U")("l"|"L")("l"|"L")>}
  TOKEN:{<READ:("r"|"R")("e"|"E")("a"|"A")("d"|"D")>}
  TOKEN:{<WRITE:("w"|"W")("r"|"R")("i"|"I")("t"|"T")("e"|"E")>}
  TOKEN:{<PLUS:"+">}
  TOKEN:{<MINUS:"-">}
  TOKEN:{<MUL:"*">}
  TOKEN:{<DIV:"/">}
  TOKEN:{<MOD:"%">}
  TOKEN:{<EQEQ:"==">}
  TOKEN:{<NEQ:"!=">}
  TOKEN:{<LESS:"<">}
  TOKEN:{<GREAT:">">}
  TOKEN:{<LESSEQ:"<=">}
  TOKEN:{<GREATEQ:">=">}
  TOKEN:{<OR:"||">}
  TOKEN:{<AND:"&&">}
  TOKEN:{<OPEN_PAREN:"(">}
  TOKEN:{<CLOSE_PAREN:")">}
  TOKEN:{<OPEN_BRACKET:"[">}
  TOKEN:{<CLOSE_BRACKET:"]">}
  TOKEN:{<OPEN_BRACE:"{">}
  TOKEN:{<CLOSE_BRACE:"}">}
  TOKEN:{<NOT:"!">}
  TOKEN:{<COMMA:",">}
  TOKEN:{<SEMICOLON:";">}
  TOKEN:{<DOT:".">}
  TOKEN:{<COLON:":">}
  TOKEN:{<AMPERSAND:"&">}
  TOKEN:{<EQUAL:"=">}
  TOKEN:{<UNDERSCORE:"_">}
  TOKEN:{<ARROW:"->">}

  TOKEN:{<identificador:<letra>(<letra>|<digito>)*>}
  TOKEN:{<intNumber: <digitoPositivo> (<digito>)* |"0" >}

  TOKEN:{<realNumber: <intNumber> (<realPart>|"") (<exponentialPart>|"")>}
  TOKEN:{<realPart: "." ("0"|(<digito>)*)>}
  TOKEN:{<exponentialPart: ("e"|"E") ("-"|"") <intNumber> >}

  TOKEN:{<stringLiteral: "\"" (<validChar>)* "\"">}
  TOKEN:{<charLiteral: "'" (<validChar> | "\"") "'" >}


  void inicio()        : {} {program() <EOF>}

  Prog program()      :
	{Lista<Dec> dec; Inst ins;}
	{
	 dec = declaraciones() ins = instruccion()
		{return ops.prog(dec,ins);}
	}

  Lista<Dec> declaraciones() :
	{Lista<Dec> decs;}
	{
	  decs=listaDeclaraciones()
		{return decs;}
			|
		{return ops.nodecs();}
	}


  Lista<Dec> listaDeclaraciones() :
	{Dec dec; Lista<Dec> decs;}
	{
	  dec=declaracion()
	  decs=rListaDeclaraciones(ops.decs(ops.nodecs(),dec))
		  {return decs;}
	}

    Lista<Dec> rListaDeclaraciones(Lista<Dec> decsh) :
        {Dec dec; Lista<Dec> decs;}
        {
        dec=declaracion()
        decs=rListaDeclaraciones(ops.decs(decsh,dec))
        {return decs;}
        |
        {return decsh;}
        }

  Dec declaracion() :
	 {DeclaredType tipo;  Token id; Token proc;
	  CabezaProcAs cabezaProc$as; Inst ins;}
	 {
		<TYPE> tipo = tipo0() id=<identificador> ";"
		  {return ops.dectype(tipo,id.image,enlaceFuente(id));}
			|
		<VAR> tipo = tipo0() id=<identificador> ";"
		  {return ops.decvar(tipo,id.image,enlaceFuente(id));}
			|
        proc=<PROC> cabezaProc$as = cabezaProc() ins = bloque() pyComa()
		  {return ops.decProc(cabezaProc$as.proc, cabezaProc$as.fparams, ins,
							  enlaceFuente(proc));}
	  }

  CabezaProcAs cabezaProc() :
	 {Lista<FParam> fparams; Token id;}
	 {
	   id=<identificador> "(" fparams = parametrosFormales() ")"
		  {return new CabezaProcAs(id.image,fparams);}
	 }

  Lista<FParam> parametrosFormales() :
	 {Lista<FParam> fparams;}
	 {
	   fparams = listaParametrosFormales()
		 {return fparams;}
		 |
		 {return ops.nofparams();}
	 }

  Lista<FParam> listaParametrosFormales() :
	 {FParam fparam;
	  Lista<FParam> fparams;}
	 {
	   fparam = parametroFormal()
	   fparams = rListaParametrosFormales(ops.fparams(ops.nofparams(),fparam))
		  {return fparams;}
	 }

  Lista<FParam> rListaParametrosFormales(Lista<FParam> fparamsh) :
	 {FParam fparam;
	  Lista<FParam> fparams;}
	 {<COMMA> fparam = parametroFormal()
	  fparams= rListaParametrosFormales(ops.fparams(fparamsh,fparam))
	  {return fparams;}
	  |
	  {return fparamsh;}
	 }

  FParam parametroFormal() :
	 {DeclaredType tipo; boolean porRef; Token id;}
	 {
	  tipo = tipo0() porRef = modo() id=<identificador>
		{return ops.fparam(tipo,porRef,id.image,enlaceFuente(id));}
	 }

  boolean modo() :
	{}
	{
	 <AMPERSAND>
	   {return true;}
	 |
	   {return false;}
	}

  DeclaredType tipo0() :
	{DeclaredType tipo$tipo1;
	 DeclaredType tipo$rTipo0;}
	{
	  tipo$tipo1=tipo1() tipo$rTipo0 = rTipo0(tipo$tipo1)
		{return tipo$rTipo0;}
	}

  DeclaredType rTipo0(DeclaredType tipoh) :
	{DeclaredType tipo; Token size;}
	{
	  <MUL> tipo=rTipo0(ops.tPointer(tipoh))
		{return tipo;}
	   |
	  <OPEN_BRACKET> size=<intNumber> <CLOSE_BRACKET>
	    {return ops.tarray(tipoh, ops.parseInt(size.image));}
	  |
		{return tipoh;}
	}

  DeclaredType tipo1() :
	{Token id; }
	{
	  <INT>
		{return ops.tInt();}
		|
	  <BOOL>
		{return ops.tBool();}
		|
	  <DOUBLE>
		{return ops.tReal();}
		|
	  <STRING>
		{return ops.tUniString();}
		|
	  <CHAR>
	   {return ops.tUniChar();}
	   |
	  id=<identificador>
		{return ops.tref(id.image,enlaceFuente(id));}
	}


  Inst instruccion() :
	{Inst ins;}
	{
	 ins = iasig()
	  {return ins;}
	  |
	 ins = iblock()
	  {return ins;}
	  |
	 ins = iwhile()
	  {return ins;}
	  |
	 ins = icall()
	  {return ins;}
	  |
	 ins = inew()
	  {return ins;}
	  |
	 ins = idelete()
	  {return ins;}
  }

  Inst iasig() :
	{Exp el,er; Token asig;}
	{
	 el=exp0() asig=<EQUAL> er=exp0() <SEMICOLON>
	  {return ops.iasig(el,er,enlaceFuente(asig));}
	}

  Inst iblock() :
   {Inst ins;}
  {
	ins=bloque() pyComa()
	  {return ins;}
  }

  Inst iwhile() :
   {Exp exp; Inst i; Token While;}
   {
	 While=<WHILE> exp=exp0() i=bloque() pyComa()
	  {return ops.iwhile(exp,i,enlaceFuente(While));}
   }


  Inst icall() :
	 {Token id;  Lista<Exp> rparams;}
	 {
	  <CALL> id=<identificador> rparams=parametrosReales() <SEMICOLON>
		 {return ops.icall(id.image,rparams,enlaceFuente(id));}
	 }
  Lista<Exp> parametrosReales() :
	{Lista<Exp> rparams;}
	{
	  <WITH> rparams=listaParametrosReales()
		 {return rparams;}
	  |
		 {return ops.norparams();}
	}
  Lista<Exp> listaParametrosReales() :
   {Exp rparam; Lista<Exp> rparams;}
  {
	rparam=exp0() rparams=rListaParametrosReales(ops.rparams(ops.norparams(),rparam))
	 {return rparams;}
  }
  Lista<Exp> rListaParametrosReales(Lista<Exp> rparamsh) :
	{Exp rparam; Lista<Exp> rparams;}
   {
	 <COMMA> rparam = exp0() rparams=rListaParametrosReales(ops.rparams(rparamsh,rparam))
	   {return rparams;}

	 |
	{return rparamsh;}
   }


  Inst inew() :
	{Token cnew; Exp desig;}
	{
	 cnew=<NEW> desig=exp0() <SEMICOLON>
		{return ops.inew(desig,enlaceFuente(cnew));}
	}

  Inst idelete() :
	{Token cdelete; Exp desig;}
	{
	  cdelete=<DELETE> desig=exp0() <SEMICOLON>
		 {return ops.idelete(desig,enlaceFuente(cdelete));}
	}

  Inst bloque() :
	{Lista<Dec> decs; Lista<Inst> is;}
   {
	 <OPEN_BRACE> decs= declaraciones() is=instrucciones() <CLOSE_BRACE>
		 {return ops.iblock(decs,is);}
   }
  Lista<Inst> instrucciones() :
	{Lista<Inst> insts;}
	{
	 insts=listaInstrucciones()
	   {return insts;}
	 |
	   {return ops.noInsts();}
	}
  Lista<Inst> listaInstrucciones() :
	{Inst ins; Lista<Inst> insts;}
	{
	  ins=instruccion() insts=rListaInstrucciones(ops.insts(ops.noInsts(),ins))
		{return insts;}
	}
  Lista<Inst> rListaInstrucciones(Lista<Inst> instsh) :
   {Inst ins; Lista<Inst> insts;}
   {
	 ins=instruccion() insts=rListaInstrucciones(ops.insts(instsh,ins))
		{return insts;}
	 |
	 {return instsh;}
   }

  void pyComa() : {} {<SEMICOLON> | {}}

  Exp exp0() :
   {Exp exp$exp1, exp$rexp0;}
   {
	exp$exp1 = exp1() exp$rexp0=rexp0(exp$exp1)
	 {return exp$rexp0;}
   }
   Exp rexp0(Exp exph) :
	   {Token op; Exp exp$exp1, exp$rexp0;}
	   {
		 op=<EQEQ> exp$exp1=exp0()
		 exp$rexp0=rexp0(ops.equals(exph,exp$exp1))
			{return exp$rexp0;}
		 |
		 op=<NEQ> exp$exp1=exp0()
		 exp$rexp0=rexp0(ops.notequals(exph,exp$exp1))
			{return exp$rexp0;}
		 |
		 op=<LESS> exp$exp1=exp0()
		 exp$rexp0=rexp0(ops.less(exph,exp$exp1))
			{return exp$rexp0;}
		 |
		 op=<GREAT> exp$exp1=exp0()
		 exp$rexp0=rexp0(ops.greater(exph,exp$exp1))
			{return exp$rexp0;}
		 |
		 op=<LESSEQ> exp$exp1=exp0()
		 exp$rexp0=rexp0(ops.lesseq(exph,exp$exp1))
			{return exp$rexp0;}
		 |
		 op=<GREATEQ> exp$exp1=exp0()
		 exp$rexp0=rexp0(ops.greatereq(exph,exp$exp1))
			{return exp$rexp0;}
		 |
		 {return exph;}
	   }

   Exp exp1() :
   {Exp exp$exp2, exp$rexp1;}
   {
	 exp$exp2=exp2()  exp$rexp1=rexp1(exp$exp2)
	   {return exp$rexp1;}
   }
  Exp rexp1(Exp exph) :
	{Token op; Exp exp$exp2, exp$rexp1;}
	{
	  op=<PLUS> exp$exp2=exp2()
	  exp$rexp1=rexp1(ops.add(exph,exp$exp2,enlaceFuente(op)))
		 {return exp$rexp1;}
	  |
	  op=<MINUS> exp$exp2=exp2()
	  exp$rexp1=rexp1(ops.subtract(exph,exp$exp2,enlaceFuente(op)))
		 {return exp$rexp1;}
	  |
	  op=<OR> exp$exp2=exp2()
	  exp$rexp1=rexp1(ops.or(exph,exp$exp2))
		 {return exp$rexp1;}
	  |
	  {return exph;}
	}

  Exp exp2() :
	{Exp exp$exp3, exp$rexp2;}
	{
	 exp$exp3=exp3() exp$rexp2=rexp2(exp$exp3)
		{return exp$rexp2;}
	}
  Exp rexp2(Exp exph) :
	{Exp exp; Token t;}
	{
	 t=<AND> exp=exp3()
		{return ops.and(exph,exp,enlaceFuente(t));}
	 |
	 t=<MUL> exp=exp3()
		{return ops.multiply(exph,exp,enlaceFuente(t));}
	 |
	 t=<DIV> exp=exp3()
		{return ops.divide(exph,exp,enlaceFuente(t));}
	 |
	 t=<MOD> exp=exp3()
		{return ops.modulus(exph,exp,enlaceFuente(t));}
	 |
	 {return exph;}
	}

  Exp exp3() :
	{Exp exp, exp$castexp; Token t;}
	{
	t=<NOT> exp=exp3()
	    {return ops.not(exp);}
	|
	t=<MINUS> exp=exp3()
	    {return ops.negative(exp,enlaceFuente(t));}
	|
	t=<LESS> exp$castexp=castexp(t)
	    {return exp$castexp;}
	|
	exp=exp4()
	    {return exp;}
  }

  Exp castexp(Token t) :
  {Exp exp;}
  {
  t=<INT> <GREAT> exp=exp3()
    {return ops.intcast(exp, enlaceFuente(t));}
  |
  t=<DOUBLE> <GREAT> exp=exp3()
    {return ops.realcast(exp, enlaceFuente(t));}
  |
  t=<BOOL> <GREAT> exp=exp3()
    {return ops.boolcast(exp, enlaceFuente(t));}
  |
  t=<CHAR> <GREAT> exp=exp3()
    {return ops.charcast(exp, enlaceFuente(t));}
  |
  t=<STRING> <GREAT> exp=exp3()
    {return ops.strcast(exp, enlaceFuente(t));}
  }

  Exp exp4() :
	{Exp exp$exp5, exp$rexp4;}
    {
     exp$exp5=exp5() exp$rexp4=rexp4(exp$exp5)
        {return exp$rexp4;}
    }
  Exp rexp4(Exp exph):
  {Exp exp; Token t;}
  {
  t=<UNDERSCORE> exp=exp5()
    {return ops.strElem(exph, exp, enlaceFuente(t));}
  |
  {return exph;}
  }

  Exp exp5() :
  {Exp exp$exp6, exp$rexp5;}
  {
     exp$exp6=exp6() exp$rexp5=rexp5(exp$exp6)
        {return exp$rexp5;}
  }

  Exp rexp5(Exp exph) :
	{Exp exp; Token field, t;}
	{
	t=<OPEN_BRACKET> exp=exp0() <CLOSE_BRACKET>
	    {return ops.arrayindex(exph, exp, enlaceFuente(t));}
	|
	t=<DOT> field=<identificador>
	    {return ops.structfield(exph, field.image, enlaceFuente(t));}
	|
    t=<ARROW> field=<identificador>
        {return ops.structfieldref(exph, field.image, enlaceFuente(t));}
    |
	{return exph;}
	}

  Exp exp6() :
	{Exp exp; Token t;}
	{
	  t=<MUL> exp=exp6()
	   {return ops.opUn(t.image,exp,enlaceFuente(t));}
	 |
	 exp=exp7()
	   {return exp;}
	}

  Exp exp7() :
	 {Token t; Exp e;}
	 {
	  t=<identificador>
	   {return ops.var(t.image,enlaceFuente(t));}
	  |
	  e=literal()
		{return e;}
	  |
	  <OPEN_PAREN> e=exp0() <CLOSE_PAREN>
		{return e;}
	 }
  Exp literal() :
	{Token t;}
	 {
	  t=<intNumber>
			{return ops.intFromString(t.image);}
	  |
	  t=<realNumber>
			{return ops.realFromString(t.image);}
	  |
	  t=<charLiteral>
			{return ops.charLiteral(t.image);}
	  |
	  t=<stringLiteral>
			{return ops.stringLiteral(t.image);}
	  |
	  <TRUE>
			{return ops.boolct(true);}
	  |
	  <FALSE>
			{return ops.boolct(false);}
	 }
