src/main/java/frontend/AnalizadorSintacticoTiny.java
/* Generated By:JavaCC: Do not edit this line. AnalizadorSintacticoTiny.java */
package frontend;

import program.Program.Prog;
import program.Program.Dec;
import program.Program.Inst;
import program.Program.DeclaredType;
import program.Program.FParam;
import program.Program.Exp;


import frontend.ASTOps.Lista;

class CabezaProcAs {
   public String proc;
   public Lista<FParam> fparams;
   public CabezaProcAs(String proc, Lista<FParam> fparams) {
          this.proc = proc;
          this.fparams = fparams;
   }
}

public class AnalizadorSintacticoTiny implements AnalizadorSintacticoTinyConstants {
   private ASTOps ops;
   public void setOps(ASTOps ops) {
         this.ops = ops;
   }
   String enlaceFuente(Token token) {
        return "fila "+token.beginLine+" columna "+token.beginColumn;
   }

  final public void inicio() throws ParseException {
    program();
    jj_consume_token(0);
  }

  final public Prog program() throws ParseException {
         Lista<Dec> dec; Inst ins;
    dec = declaraciones();
    ins = instruccion();
                 {if (true) return ops.prog(dec,ins);}
    throw new Error("Missing return statement in function");
  }

  final public Lista<Dec> declaraciones() throws ParseException {
         Lista<Dec> decs;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TYPE:
    case VAR:
    case PROC:
      decs = listaDeclaraciones();
                 {if (true) return decs;}
      break;
    default:
      jj_la1[0] = jj_gen;
                 {if (true) return ops.nodecs();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Lista<Dec> listaDeclaraciones() throws ParseException {
         Dec dec; Lista<Dec> decs;
    dec = declaracion();
    decs = rListaDeclaraciones(ops.decs(ops.nodecs(),dec));
                   {if (true) return decs;}
    throw new Error("Missing return statement in function");
  }

  final public Lista<Dec> rListaDeclaraciones(Lista<Dec> decsh) throws ParseException {
          Dec dec; Lista<Dec> decs;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TYPE:
    case VAR:
    case PROC:
      dec = declaracion();
      decs = rListaDeclaraciones(ops.decs(decsh,dec));
                    {if (true) return decs;}
      break;
    default:
      jj_la1[1] = jj_gen;
                    {if (true) return decsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Dec declaracion() throws ParseException {
          DeclaredType tipo;  Token id; Token proc;
          CabezaProcAs cabezaProc$as; Inst ins;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TYPE:
      jj_consume_token(TYPE);
      tipo = tipo0();
      id = jj_consume_token(identificador);
      jj_consume_token(SEMICOLON);
                   {if (true) return ops.dectype(tipo,id.image,enlaceFuente(id));}
      break;
    case VAR:
      jj_consume_token(VAR);
      tipo = tipo0();
      id = jj_consume_token(identificador);
      jj_consume_token(SEMICOLON);
                   {if (true) return ops.decvar(tipo,id.image,enlaceFuente(id));}
      break;
    case PROC:
      proc = jj_consume_token(PROC);
      cabezaProc$as = cabezaProc();
      ins = bloque();
      pyComa();
                   {if (true) return ops.decProc(cabezaProc$as.proc, cabezaProc$as.fparams, ins,
                                                          enlaceFuente(proc));}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public CabezaProcAs cabezaProc() throws ParseException {
          Lista<FParam> fparams; Token id;
    id = jj_consume_token(identificador);
    jj_consume_token(OPEN_PAREN);
    fparams = parametrosFormales();
    jj_consume_token(CLOSE_PAREN);
                   {if (true) return new CabezaProcAs(id.image,fparams);}
    throw new Error("Missing return statement in function");
  }

  final public Lista<FParam> parametrosFormales() throws ParseException {
          Lista<FParam> fparams;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOL:
    case CHAR:
    case STRING:
    case DOUBLE:
    case identificador:
      fparams = listaParametrosFormales();
                  {if (true) return fparams;}
      break;
    default:
      jj_la1[3] = jj_gen;
                  {if (true) return ops.nofparams();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Lista<FParam> listaParametrosFormales() throws ParseException {
          FParam fparam;
          Lista<FParam> fparams;
    fparam = parametroFormal();
    fparams = rListaParametrosFormales(ops.fparams(ops.nofparams(),fparam));
                   {if (true) return fparams;}
    throw new Error("Missing return statement in function");
  }

  final public Lista<FParam> rListaParametrosFormales(Lista<FParam> fparamsh) throws ParseException {
          FParam fparam;
          Lista<FParam> fparams;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      fparam = parametroFormal();
      fparams = rListaParametrosFormales(ops.fparams(fparamsh,fparam));
           {if (true) return fparams;}
      break;
    default:
      jj_la1[4] = jj_gen;
           {if (true) return fparamsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public FParam parametroFormal() throws ParseException {
          DeclaredType tipo; boolean porRef; Token id;
    tipo = tipo0();
    porRef = modo();
    id = jj_consume_token(identificador);
                 {if (true) return ops.fparam(tipo,porRef,id.image,enlaceFuente(id));}
    throw new Error("Missing return statement in function");
  }

  final public boolean modo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AMPERSAND:
      jj_consume_token(AMPERSAND);
            {if (true) return true;}
      break;
    default:
      jj_la1[5] = jj_gen;
            {if (true) return false;}
    }
    throw new Error("Missing return statement in function");
  }

  final public DeclaredType tipo0() throws ParseException {
         DeclaredType tipo$tipo1;
         DeclaredType tipo$rTipo0;
    tipo$tipo1 = tipo1();
    tipo$rTipo0 = rTipo0(tipo$tipo1);
                 {if (true) return tipo$rTipo0;}
    throw new Error("Missing return statement in function");
  }

  final public DeclaredType rTipo0(DeclaredType tipoh) throws ParseException {
         DeclaredType tipo;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MUL:
      jj_consume_token(MUL);
      tipo = rTipo0(ops.tipoPointer(tipoh));
                 {if (true) return tipo;}
      break;
    default:
      jj_la1[6] = jj_gen;
                 {if (true) return tipoh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public DeclaredType tipo1() throws ParseException {
         Token id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
                 {if (true) return ops.tInt();}
      break;
    case BOOL:
      jj_consume_token(BOOL);
                 {if (true) return ops.tBool();}
      break;
    case DOUBLE:
      jj_consume_token(DOUBLE);
                 {if (true) return ops.tReal();}
      break;
    case STRING:
      jj_consume_token(STRING);
                 {if (true) return ops.tUniString();}
      break;
    case CHAR:
      jj_consume_token(CHAR);
            {if (true) return ops.tUniChar();}
      break;
    case identificador:
      id = jj_consume_token(identificador);
                 {if (true) return ops.tref(id.image,enlaceFuente(id));}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst instruccion() throws ParseException {
         Inst ins;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case MUL:
    case OPEN_PAREN:
    case identificador:
    case intNumber:
    case realNumber:
    case stringLiteral:
    case charLiteral:
      ins = iasig();
           {if (true) return ins;}
      break;
    case OPEN_BRACE:
      ins = iblock();
           {if (true) return ins;}
      break;
    case WHILE:
      ins = iwhile();
           {if (true) return ins;}
      break;
    case CALL:
      ins = icall();
           {if (true) return ins;}
      break;
    case NEW:
      ins = inew();
           {if (true) return ins;}
      break;
    case DELETE:
      ins = idelete();
           {if (true) return ins;}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst iasig() throws ParseException {
         Exp el,er; Token asig;
    el = exp0();
    asig = jj_consume_token(EQUAL);
    er = exp0();
    jj_consume_token(SEMICOLON);
           {if (true) return ops.iasig(el,er,enlaceFuente(asig));}
    throw new Error("Missing return statement in function");
  }

  final public Inst iblock() throws ParseException {
    Inst ins;
    ins = bloque();
    pyComa();
           {if (true) return ins;}
    throw new Error("Missing return statement in function");
  }

  final public Inst iwhile() throws ParseException {
    Exp exp; Inst i; Token While;
    While = jj_consume_token(WHILE);
    exp = exp0();
    i = bloque();
    pyComa();
           {if (true) return ops.iwhile(exp,i,enlaceFuente(While));}
    throw new Error("Missing return statement in function");
  }

  final public Inst icall() throws ParseException {
          Token id;  Lista<Exp> rparams;
    jj_consume_token(CALL);
    id = jj_consume_token(identificador);
    rparams = parametrosReales();
    jj_consume_token(SEMICOLON);
                  {if (true) return ops.icall(id.image,rparams,enlaceFuente(id));}
    throw new Error("Missing return statement in function");
  }

  final public Lista<Exp> parametrosReales() throws ParseException {
         Lista<Exp> rparams;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WITH:
      jj_consume_token(WITH);
      rparams = listaParametrosReales();
                  {if (true) return rparams;}
      break;
    default:
      jj_la1[9] = jj_gen;
                  {if (true) return ops.norparams();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Lista<Exp> listaParametrosReales() throws ParseException {
    Exp rparam; Lista<Exp> rparams;
    rparam = exp0();
    rparams = rListaParametrosReales(ops.rparams(ops.norparams(),rparam));
          {if (true) return rparams;}
    throw new Error("Missing return statement in function");
  }

  final public Lista<Exp> rListaParametrosReales(Lista<Exp> rparamsh) throws ParseException {
         Exp rparam; Lista<Exp> rparams;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      rparam = exp0();
      rparams = rListaParametrosReales(ops.rparams(rparamsh,rparam));
            {if (true) return rparams;}
      break;
    default:
      jj_la1[10] = jj_gen;
         {if (true) return rparamsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Inst inew() throws ParseException {
         Token cnew; Exp desig;
    cnew = jj_consume_token(NEW);
    desig = exp0();
    jj_consume_token(SEMICOLON);
                 {if (true) return ops.inew(desig,enlaceFuente(cnew));}
    throw new Error("Missing return statement in function");
  }

  final public Inst idelete() throws ParseException {
         Token cdelete; Exp desig;
    cdelete = jj_consume_token(DELETE);
    desig = exp0();
    jj_consume_token(SEMICOLON);
                  {if (true) return ops.idelete(desig,enlaceFuente(cdelete));}
    throw new Error("Missing return statement in function");
  }

  final public Inst bloque() throws ParseException {
         Lista<Dec> decs; Lista<Inst> is;
    jj_consume_token(OPEN_BRACE);
    decs = declaraciones();
    is = instrucciones();
    jj_consume_token(CLOSE_BRACE);
                  {if (true) return ops.iblock(decs,is);}
    throw new Error("Missing return statement in function");
  }

  final public Lista<Inst> instrucciones() throws ParseException {
         Lista<Inst> insts;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case WHILE:
    case CALL:
    case NEW:
    case DELETE:
    case MUL:
    case OPEN_PAREN:
    case OPEN_BRACE:
    case identificador:
    case intNumber:
    case realNumber:
    case stringLiteral:
    case charLiteral:
      insts = listaInstrucciones();
            {if (true) return insts;}
      break;
    default:
      jj_la1[11] = jj_gen;
            {if (true) return ops.noInsts();}
    }
    throw new Error("Missing return statement in function");
  }

  final public Lista<Inst> listaInstrucciones() throws ParseException {
         Inst ins; Lista<Inst> insts;
    ins = instruccion();
    insts = rListaInstrucciones(ops.insts(ops.noInsts(),ins));
                 {if (true) return insts;}
    throw new Error("Missing return statement in function");
  }

  final public Lista<Inst> rListaInstrucciones(Lista<Inst> instsh) throws ParseException {
    Inst ins; Lista<Inst> insts;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case TRUE:
    case FALSE:
    case WHILE:
    case CALL:
    case NEW:
    case DELETE:
    case MUL:
    case OPEN_PAREN:
    case OPEN_BRACE:
    case identificador:
    case intNumber:
    case realNumber:
    case stringLiteral:
    case charLiteral:
      ins = instruccion();
      insts = rListaInstrucciones(ops.insts(instsh,ins));
                 {if (true) return insts;}
      break;
    default:
      jj_la1[12] = jj_gen;
          {if (true) return instsh;}
    }
    throw new Error("Missing return statement in function");
  }

  final public void pyComa() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[13] = jj_gen;

    }
  }
